tests/fixtures/invalid/pow_set_none_list.py
# Cannot call pow() with Set[int], None, List[int]
x = pow({1, 2, 3}, None, [1, 2, 3])
